{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 11,
  "lineage": "4daeffcc-6352-d29e-a48b-6ea8b2e9fdd0",
  "resources": [
    {
      "module": "module.rabbitmq",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218435950768:vpc/vpc-0956e9914efe15691",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0310ba7a8643956be",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dba8c5a97367adfb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0956e9914efe15691",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cda54aac64462baa",
            "owner_id": "218435950768",
            "tags": {
              "Name": "express-nodejs-demo-vpc",
              "department": "dev",
              "env": "production",
              "name": "express-nodejs-demo-express-app",
              "owner": "MrT",
              "project": "express-nodejs-demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.rabbitmq",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rabbitmq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218435950768:security-group/sg-06a9f6e72e9104693",
            "description": "Security group for RabbitMQ broker",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a9f6e72e9104693",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "RabbitMQ AMQP",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "RabbitMQ Management",
                "from_port": 15672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 15672
              }
            ],
            "name": "infra-rabbitmq-sg",
            "name_prefix": "",
            "owner_id": "218435950768",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "infra-rabbitmq-sg",
              "Project": "FactorialService"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "infra-rabbitmq-sg",
              "Project": "FactorialService"
            },
            "timeouts": null,
            "vpc_id": "vpc-0956e9914efe15691"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.rabbitmq.data.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "data",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218435950768:vpc/vpc-0956e9914efe15691",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0310ba7a8643956be",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-0dba8c5a97367adfb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0956e9914efe15691",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cda54aac64462baa",
            "owner_id": "218435950768",
            "tags": {
              "Name": "express-nodejs-demo-vpc",
              "department": "dev",
              "env": "production",
              "name": "express-nodejs-demo-express-app",
              "owner": "MrT",
              "project": "express-nodejs-demo"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:218435950768:security-group/sg-0beb72db757fb7066",
            "description": "Security group for Redis ElastiCache cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0beb72db757fb7066",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Redis from VPC",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "infra-redis-sg",
            "name_prefix": "",
            "owner_id": "218435950768",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Development",
              "Name": "infra-redis-sg",
              "Project": "FactorialService"
            },
            "tags_all": {
              "Environment": "Development",
              "Name": "infra-redis-sg",
              "Project": "FactorialService"
            },
            "timeouts": null,
            "vpc_id": "vpc-0956e9914efe15691"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.redis.data.aws_vpc.this"
          ]
        }
      ]
    }
  ]
}